@@ -1,6 +1,8 @@
 *.egg-info
 *.pyc
 *.swp
+.cache
+.coverage
 .tox
 build
 dist
