@@ -94,7 +94,9 @@ map:
                 desc: |
                     Name of the archive. Borg placeholders can be used. See the output of
                     "borg help placeholders" for details. Default is
-                    "{hostname}-{now:%Y-%m-%dT%H:%M:%S.%f}"
+                    "{hostname}-{now:%Y-%m-%dT%H:%M:%S.%f}". If you specify this option, you must
+                    also specify a prefix in the retention section to avoid accidental pruning of
+                    archives with a different archive name format.
                 example: "{hostname}-documents-{now}"
     retention:
         desc: |
